# AdvancedTicTacToe

./: CMakeLists.txt  README.md
configs/: classic_gomoku.ini  maximize_lines_weighted.ini
engine/: CMakeLists.txt
engine/include/engine/: AI.h  Board.h  CellValueFunction.h  Coord.h  FiniteBoard.h  GameState.h  InfiniteBoard.h  Move.h  Player.h  RuleSet.h  Scoring.h
engine/src/: AI.cpp  CellValueFunction.cpp  FiniteBoard.cpp  GameState.cpp  InfiniteBoard.cpp  RuleSet.cpp  Scoring.cpp
qt_gui/: CMakeLists.txt
qt_gui/src/: AppConfig.cpp  AppConfig.h  BoardView.cpp  BoardView.h  GameOverDialog.cpp  GameOverDialog.h  GridItem.cpp  GridItem.h  MainWindow.cpp  MainWindow.h  MarkItem.cpp  MarkItem.h  SettingsPanel.cpp  SettingsPanel.h  main.cpp
tests/: CMakeLists.txt  test_main.cpp
